k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: assignment-app
  namespace: assignment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: assignment-app

  template:
    metadata:
      labels:
        app: assignment-app

    spec:

      containers:
        - name: flask-app
          image: 022599238981.dkr.ecr.ap-south-1.amazonaws.com/flask-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000

          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"

            limits:
              memory: "256Mi"
              cpu: "500m"
