k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: assignment-service
  namespace: assignment

spec:
  type: ClusterIP

  selector:
    app: assignment-app

  ports:
  - port: 80
    targetPort: 5000
